manifests/base/class-management-class-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-deployment
  labels:
    app: class-management-class-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-class-service
  template:
    metadata:
      labels:
        app: class-management-class-service
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: class-management-class-service-container
          image: busybox # {"$imagepolicy": "production:class-service-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-postgresql-deployment
  labels:
    app: class-service-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-service-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: class-service-postgresql
    spec:
      containers:
        - name: class-service-postgresql-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-sql
          configMap:
            name: class-postgresql-initdb
