manifests/base/class-management-class-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: class-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: class-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: class-service
              port:
                number: 8000
